Added loading of yesterday's image. Added localstorage capabilities to disable from fetching from NASA everytime the user hits the page and cache the image URL.

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
         </header>
 
         <div class="siteContent">
-
+          <div>
+            <img id="img"/>
+          </div>
         </div>
 
 
@@ -51,6 +53,7 @@
           </div>
         </footer>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <!--build:js js/main.min.js -->
         <script src="js/main.js"></script>
         <!-- endbuild -->
