Added image to be centered using flexbox

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,18 @@
         </header>
 
         <div class="siteContent">
-          <div>
-            <img id="img"/>
-          </div>
+          <section class="row-fluid">
+            <div class="container">
+              <h2>Image of the day</h2>
+              <div class="col-sm-12">
+                <div class="imageContainer">
+                  <div class="imageOfDayContainer">
+                    <img id="imageOfDay" class="imageOfTheDay"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
 
 
