Added Responsiveness Mobile query and title/date to Image of the Day

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
                 <div class="imageContainer">
                   <div class="imageOfDayContainer">
                     <img id="imageOfDay" class="imageOfTheDay"/>
+                    <div class="imageDescription">
+                      <div id="imageOfDayName">Name</div>
+                      <div id="imageOfDayDate">xxx/xxx/xxx</div>
+                    </div>
                   </div>
                 </div>
               </div>
